Fixed some incompatabilites because what's the difference between jar and txt